[package]
name = "yp_bank_system"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
binrw = "0.15.1"
csv = "1.4.0"
enum_dispatch = "0.3.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"
