[package]
name = "yp_bank_system"
version = "0.1.0"
edition = "2024"

[lib]
name = "parser"
path = "src/lib.rs"

[[bin]]
name = "converter"
path = "src/main.rs"

[[bin]]
name = "comparer"
path = "src/bin/comparer.rs"

[dependencies]
anyhow = "1.0"
binrw = "0.15"
clap = { version = "4.6", features = ["derive"] }
csv = "1.4"
enum_dispatch = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
